[gd_scene load_steps=12 format=3 uid="uid://b3kp4yvs1tsvk"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_2mafl"]
[ext_resource type="Texture2D" uid="uid://dqxenyuy7cq8p" path="res://textures/github-mark-white.svg" id="2_dhs75"]
[ext_resource type="Texture2D" uid="uid://dhiglb0caii3k" path="res://textures/email.svg" id="3_05c37"]
[ext_resource type="Texture2D" uid="uid://b8nrxeivn87uy" path="res://textures/image.svg" id="4_ofq1y"]
[ext_resource type="Script" path="res://scripts/DictionaryContainer.gd" id="5_bcwqd"]
[ext_resource type="Script" path="res://scripts/PhonologyContainer.gd" id="6_0ik07"]
[ext_resource type="PackedScene" uid="uid://ddlijlo3awa1" path="res://scenes/table/table.tscn" id="7_7j8ct"]
[ext_resource type="Script" path="res://scripts/SoundChangeTool.gd" id="8_3i30n"]
[ext_resource type="Script" path="res://scripts/DataFrame.gd" id="8_kierl"]
[ext_resource type="Script" path="res://scripts/IPAKeyboardTool.gd" id="9_f2pyp"]

[sub_resource type="Resource" id="Resource_628lb"]
script = ExtResource("8_kierl")
data = [["Hello"]]
columns = PackedStringArray("Test")

[node name="Control" type="Control" node_paths=PackedStringArray("open_file_button", "save_file_button", "new_project_button", "translation_settings", "part_of_speech_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mafl")
open_file_button = NodePath("TabManager/HOME_MENU/OPEN_FILE")
save_file_button = NodePath("TabManager/HOME_MENU/SAVE_FILE")
new_project_button = NodePath("TabManager/HOME_MENU/NEW_PROJECT")
translation_settings = NodePath("TabManager/HOME_MENU/TranslationSettings")
part_of_speech_list = NodePath("TabManager/GRAMMAR_MODULE/PartOfSpeechList")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="TabManager" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 40.0
current_tab = 4

[node name="HOME_MENU" type="Control" parent="TabManager"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="OPEN_FILE" type="Button" parent="TabManager/HOME_MENU"]
layout_mode = 0
offset_left = 20.0
offset_top = 35.0
offset_right = 144.0
offset_bottom = 82.0
text = "OPEN_FILE"

[node name="SAVE_FILE" type="Button" parent="TabManager/HOME_MENU"]
layout_mode = 0
offset_left = 170.0
offset_top = 35.0
offset_right = 294.0
offset_bottom = 82.0
text = "SAVE_FILE"

[node name="NEW_PROJECT" type="Button" parent="TabManager/HOME_MENU"]
layout_mode = 0
offset_left = 320.0
offset_top = 35.0
offset_right = 444.0
offset_bottom = 82.0
text = "NEW_PROJECT"

[node name="GitHub Link" type="LinkButton" parent="TabManager/HOME_MENU"]
layout_mode = 1
anchors_preset = -1
anchor_top = -3.267
anchor_bottom = -3.267
offset_left = 20.0
offset_top = 572.403
offset_right = 70.0
offset_bottom = 622.403
tooltip_text = "GITHUB"
uri = "https://github.com/GiggyMantis/Glossorola"

[node name="TextureRect" type="TextureRect" parent="TabManager/HOME_MENU/GitHub Link"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("2_dhs75")
expand_mode = 2

[node name="Email Link" type="LinkButton" parent="TabManager/HOME_MENU"]
layout_mode = 1
anchors_preset = -1
anchor_top = -3.267
anchor_bottom = -3.267
offset_left = 96.0
offset_top = 581.403
offset_right = 143.37
offset_bottom = 615.622
tooltip_text = "EMAIL"
uri = "mailto:giggymantis@gmail.com"

[node name="TextureRect" type="TextureRect" parent="TabManager/HOME_MENU/Email Link"]
layout_mode = 0
offset_right = 47.37
offset_bottom = 34.219
texture = ExtResource("3_05c37")
expand_mode = 2

[node name="Label" type="Label" parent="TabManager/HOME_MENU/Email Link"]
layout_mode = 0
offset_top = 38.0
offset_right = 40.0
offset_bottom = 61.0
text = "giggymantis@gmail.com"

[node name="TranslationSettings" type="OptionButton" parent="TabManager/HOME_MENU"]
layout_mode = 0
offset_left = 66.0
offset_top = 474.0
offset_right = 111.0
offset_bottom = 494.0
selected = 0
item_count = 3
popup/item_0/text = "English"
popup/item_1/text = "español"
popup/item_1/id = 1
popup/item_2/text = "português (brasil)"
popup/item_2/id = 2

[node name="TextureRect" type="TextureRect" parent="TabManager/HOME_MENU/TranslationSettings"]
layout_mode = 0
offset_left = -76.0
offset_top = -22.0
offset_right = 22.6667
offset_bottom = 52.0
texture = ExtResource("4_ofq1y")
expand_mode = 3

[node name="PROJECT_MENU" type="Control" parent="TabManager"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="NameOfLanguage" type="LineEdit" parent="TabManager/PROJECT_MENU"]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 70.0
offset_right = 210.0
offset_bottom = 104.0
placeholder_text = "NAME_OF_LANGUAGE"
max_length = 22
expand_to_text_length = true

[node name="Autonym" type="LineEdit" parent="TabManager/PROJECT_MENU"]
layout_mode = 1
anchors_preset = -1
offset_left = 400.0
offset_top = 70.0
offset_right = 590.0
offset_bottom = 104.0
placeholder_text = "AUTONYM"
max_length = 25
expand_to_text_length = true

[node name="Langtype" type="OptionButton" parent="TabManager/PROJECT_MENU"]
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 210.0
offset_bottom = 154.0
selected = 0
item_count = 4
popup/item_0/text = "UNSET"
popup/item_1/text = "A_PRIORI"
popup/item_1/id = 1
popup/item_2/text = "MIXED_ORI"
popup/item_2/id = 2
popup/item_3/text = "A_POSTEORI"
popup/item_3/id = 3

[node name="DICTIONARY_MODULE" type="Control" parent="TabManager"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="DictionaryAdd" type="Button" parent="TabManager/DICTIONARY_MODULE"]
layout_mode = 0
offset_left = 20.0
offset_top = 52.0
offset_right = 52.0
offset_bottom = 83.0
tooltip_text = "DICTIONARY_BUTTON_ADD_TOOLTIP"
text = "+"

[node name="DictionaryRemove" type="Button" parent="TabManager/DICTIONARY_MODULE"]
layout_mode = 0
offset_left = 68.0
offset_top = 52.0
offset_right = 100.0
offset_bottom = 83.0
tooltip_text = "DICTIONARY_BUTTON_REMOVE_TOOLTIP"
text = "-"

[node name="DictionaryScrollContainer" type="ScrollContainer" parent="TabManager/DICTIONARY_MODULE"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 1020.0
offset_bottom = 557.0

[node name="DictionaryContainer" type="VBoxContainer" parent="TabManager/DICTIONARY_MODULE/DictionaryScrollContainer" node_paths=PackedStringArray("add_button", "delete_button")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_bcwqd")
add_button = NodePath("../../DictionaryAdd")
delete_button = NodePath("../../DictionaryRemove")

[node name="GRAMMAR_MODULE" type="Control" parent="TabManager"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="PartOfSpeechList" type="TextEdit" parent="TabManager/GRAMMAR_MODULE"]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 368.0
offset_bottom = 538.0
tooltip_text = "ADD_WORD_CLASS"
text = "noun
adjective
adverb
verb
adposition
interjection
conjunction
pronoun
phrase"
placeholder_text = "ADD_WORD_CLASS"

[node name="BriefGrammarOverview" type="TextEdit" parent="TabManager/GRAMMAR_MODULE"]
layout_mode = 0
offset_left = 426.0
offset_top = 48.0
offset_right = 1126.0
offset_bottom = 538.0
tooltip_text = "BRIEF_GRAMMAR_OVERVIEW_TOOLTIP"
placeholder_text = "BRIEF_GRAMMAR_OVERVIEW_TOOLTIP"

[node name="PHONOLOGY_MODULE" type="Control" parent="TabManager"]
layout_mode = 2
metadata/_tab_index = 4

[node name="Vowels" type="Control" parent="TabManager/PHONOLOGY_MODULE"]
layout_mode = 1
anchors_preset = 0
offset_bottom = 553.0
script = ExtResource("6_0ik07")

[node name="Background" type="Panel" parent="TabManager/PHONOLOGY_MODULE/Vowels"]
layout_mode = 1
offset_left = 37.0
offset_top = 71.0
offset_right = 562.0
offset_bottom = 571.0

[node name="Table" parent="TabManager/PHONOLOGY_MODULE/Vowels/Background" instance=ExtResource("7_7j8ct")]
layout_mode = 1
data = SubResource("Resource_628lb")
editable = true

[node name="Consonants" type="Control" parent="TabManager/PHONOLOGY_MODULE"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_bottom = 553.0
grow_horizontal = 2
script = ExtResource("6_0ik07")

[node name="Background" type="Panel" parent="TabManager/PHONOLOGY_MODULE/Consonants"]
layout_mode = 1
offset_left = 12.0
offset_top = 71.0
offset_right = 537.0
offset_bottom = 571.0

[node name="Table" parent="TabManager/PHONOLOGY_MODULE/Consonants/Background" instance=ExtResource("7_7j8ct")]
layout_mode = 1
data = SubResource("Resource_628lb")
editable = true

[node name="Lock" type="CheckButton" parent="TabManager/PHONOLOGY_MODULE"]
layout_mode = 0
offset_left = 39.0
offset_top = 11.0
offset_right = 128.0
offset_bottom = 42.0
text = "LOCK"

[node name="SOUND_CHANGE_TOOL" type="Control" parent="TabManager" node_paths=PackedStringArray("apply_lexicon", "apply_lemma", "apply_ipa")]
visible = false
layout_mode = 2
script = ExtResource("8_3i30n")
apply_lexicon = NodePath("Apply")
apply_lemma = NodePath("ApplyDictionary")
apply_ipa = NodePath("ApplyDictionaryPronunciation")
metadata/_tab_index = 5

[node name="Categories" type="TextEdit" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 1
anchors_preset = -1
offset_left = 35.0
offset_top = 85.0
offset_right = 256.0
offset_bottom = 291.0
placeholder_text = "CATEGORIES"

[node name="RewriteRules" type="TextEdit" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 1
anchors_preset = -1
offset_left = 35.0
offset_top = 331.0
offset_right = 256.0
offset_bottom = 537.0
placeholder_text = "REWRITE_RULES"

[node name="SoundChanges" type="TextEdit" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 1
anchors_preset = -1
offset_left = 300.0
offset_top = 331.0
offset_right = 521.0
offset_bottom = 537.0
placeholder_text = "SOUND_CHANGES"

[node name="InputLexicon" type="TextEdit" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 1
anchors_preset = -1
offset_left = 300.0
offset_top = 85.0
offset_right = 521.0
offset_bottom = 291.0
placeholder_text = "INPUT_LEXICON"

[node name="OutputLexicon" type="TextEdit" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 1
anchors_preset = -1
offset_left = 565.0
offset_top = 85.0
offset_right = 786.0
offset_bottom = 291.0
placeholder_text = "OUTPUT_LEXICON"
editable = false

[node name="Apply" type="Button" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 0
offset_left = 784.48
offset_top = 300.0
offset_right = 987.48
offset_bottom = 340.75
text = "APPLY_SOUND_CHANGES"
alignment = 0

[node name="ApplyDictionary" type="Button" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 0
offset_left = 784.48
offset_top = 350.0
offset_right = 1086.48
offset_bottom = 390.75
text = "APPLY_SOUND_CHANGES_DICTIONARY"
alignment = 0

[node name="ApplyDictionaryPronunciation" type="Button" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 0
offset_left = 784.48
offset_top = 400.0
offset_right = 1123.48
offset_bottom = 440.75
text = "APPLY_SOUND_CHANGES_PRONUNCIATION"
alignment = 0

[node name="RewriteOnOutput" type="CheckButton" parent="TabManager/SOUND_CHANGE_TOOL"]
layout_mode = 0
offset_left = 35.0
offset_top = 47.0
offset_right = 277.0
offset_bottom = 78.0
button_pressed = true
text = "APPLY_REWRITE_OUTPUT"

[node name="IPA_KEYBOARD_TOOL" type="Control" parent="TabManager" node_paths=PackedStringArray("convert_xsampa_button")]
visible = false
layout_mode = 2
script = ExtResource("9_f2pyp")
convert_xsampa_button = NodePath("ConvertFromXSampa")
metadata/_tab_index = 6

[node name="Keyboard" type="GridContainer" parent="TabManager/IPA_KEYBOARD_TOOL"]
layout_mode = 0
offset_left = 15.0
offset_top = 200.0
offset_right = 815.0
offset_bottom = 500.0
columns = 20

[node name="TextEdit" type="TextEdit" parent="TabManager/IPA_KEYBOARD_TOOL"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 815.0
offset_bottom = 180.0

[node name="ConvertFromXSampa" type="Button" parent="TabManager/IPA_KEYBOARD_TOOL"]
layout_mode = 0
offset_left = 850.0
offset_top = 15.0
offset_right = 950.0
offset_bottom = 45.0
text = "CONVERT_FROM_XSAMPA"
